Refine XA Mass scheduling and delivery boundaries